--- a/shafee azeem.com/styles.css
+++ b/shafee azeem.com/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
     --primary-color: #16537e;
     --primary-dark: #233554;
@@ -9,84 +15,233 @@
     --bg-light: aliceblue;
 }
 
-#experience {
-    max-width: 900px;
-    margin: 50px auto;
-    padding: 20px;
+/* // container and main layout */
+.container {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+}
+
+html,
+body {
+    height: 100%;
+    overflow: hidden;
+    font-family: sans-serif;
+}
+
+.left {
+    width: 50vw;
+    background-color: rgba(147, 70, 83, 0.17);
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    padding: 2rem;
+    overflow-y: auto;
 
 }
 
-#experience h2 {
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 30px;
+.right {
+    margin-left: 50vw;
+    width: 50vw;
+    height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 2rem;
+    display: block;
+    gap: 2rem;
+
 }
 
 .experience-item {
     display: flex;
     align-items: flex-start;
+    gap: 1rem;
     margin-bottom: 40px;
+    position: relative;
+    padding-bottom: 10px;
+    cursor: pointer;
+    transition: color 0.3s;
 }
 
+.experience-details::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    width: 0%;
+    background-color: var(--primary-color);
+    transition: width 0.3s ease;
+}
+
+.experience-details:hover::after {
+    width: 80%;
+}
+
+
 .experience-item .year {
-    margin-top: 30px;
-    flex: 1;
-    font-size: 16px;
+    width: 20%;
+    display: flex;
+    font-size: 11px;
     font-weight: 900;
     color: var(--primary-color);
-    min-width: 150px;
+    margin-top: 0.5rem;
+
 }
 
 .experience-details {
-    flex: 3;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
 }
 
 .experience-details h3 {
-    font-size: h3;
-    font-weight: 600;
-    color: #16537e;
-    margin-bottom: 5px;
+    color: var(--primary-dark);
+    padding: 5px;
 }
 
-.experience-details p {
+.experience-details .work-title {
     font-size: 16px;
-    color: #a8b2d1;
-    line-height: 1;
-    margin-bottom: 9px;
+    font-weight: 600;
+    padding: 3px;
+    color: var(--secondary-dark)
 }
 
-.experience-details p:hover {
-    color: var(--primary-color)
+.experience-details .work-details {
+    font-size: 15px;
+    padding: 5px;
+    font-style: oblique;
 }
 
-.experience-details strong {
-    color: var(--secondary-color);
-    font-weight: 500;
+.experience-details .work-location {
+    color: var(--primary-dark);
+    font-weight: 700;
 }
 
-.experience-item:hover .experience-details h3 {
-    color: var(--secondary-color);
-    transition: 0.3s;
+.left-container {
+    padding: 80px 0px 0px 40px;
 }
 
-.container {
-    display: flex;
-    height: 100vh;
+.profile h1 {
+    font-family: 'Arial Black', sans-serif;
+    font-weight: 800;
+    font-size: 3rem;
 }
 
-.left {
-    width: 30%;
-    background-color: rgba(255, 192, 203, 0.17);
-    position: fixed;
+.profile .title {
+    font-family: 'Verdana', Geneva, sans-serif;
+    font-weight: 600;
+    letter-spacing: 2.5px;
+
+}
+
+.profile .skill {
+    font-family: 'Verdana', Geneva, sans-serif;
+
+}
+
+.profile {
+    margin-bottom: 40px;
+}
+
+.navigation ul {
+    list-style: none;
+    padding-left: 0px;
+    margin-top: 80px;
+}
+
+.navigation ul li a {
+    text-decoration: none;
+    position: relative;
+    display: inline-block;
+    padding-left: 50px;
+    color: black;
+    transition: color 0.9s ease;
+    font-size: 2rem;
+}
+
+.navigation ul li a::before {
+    content: "";
+    position: absolute;
     left: 0;
-    top: 0;
-    height: 100vh;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 2px;
+    width: 40px;
+    background-color: black;
+    transition: width 0.3s ease;
 }
 
-.right {
-    flex: 1;
-    margin-left: 30%;
-    padding: 2px;
+.navigation ul li a:hover::before,
+.navigation ul li a.active::before {
+    width: 50px;
+    /* line grows on hover and active */
+}
+
+
+.navigation ul li a:hover,
+.navigation ul li a.active {
+    padding-left: 70px;
+    color: rgb(15, 9, 10)
+        /* same as expanded line width */
+}
+
+.profile .action {
+    margin-top: 10px;
+
+}
+
+
+
+
+
+/* social links */
+
+.social-links {
+    margin-top: 100px;
     display: flex;
-    flex-direction: column;
+    gap: 20px;
+}
+
+.social-link {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--primary-color);
+    position: relative;
+    padding-bottom: 4px;
+    transition: color 0.3 ease;
+}
+
+.social-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0%;
+    height: 2px;
+    background-color: var(--primary-color);
+    transition: width 0.3s ease;
+}
+
+.social-link:hover::after {
+    width: 70%;
+}
+
+.social-link:hover {
+    color: var(--primary-dark)
+}
+
+.nav-link.active {
+    font-weight: bold;
+    color: var(--primary-color);
+}
+
+@media (max-width: 1024px) {
+
+    .left,
+    .right {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
 }
