--- a/shafee azeem.com/styles.css
+++ b/shafee azeem.com/styles.css
@@ -237,6 +237,59 @@ body {
     color: var(--primary-color);
 }
 
+/* project card */
+
+.project-card {
+    display: flex;
+    width: 100%;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 2rem;
+}
+
+.project-image {
+    flex: 0 0 30%;
+}
+
+.project-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: center;
+}
+
+.project-details {
+    flex: 0 0 70%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.project-details h3 {
+    margin-bottom: 0.5rem;
+    color: var(--primary-dark)
+}
+
+.project-details .tech-stack span {
+    background: var(--bg-light);
+    color: var(--primary-color);
+    padding: 4px 8px;
+    margin: 4px;
+    font-size: 12px;
+    border-radius: 4px;
+    display: inline-block;
+}
+
+
+
+.left,
+.right {
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
 @media (max-width: 1024px) {
 
     .left,
@@ -244,4 +297,22 @@ body {
         padding-left: 40px;
         padding-right: 40px;
     }
+}
+
+
+.project-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 300px;
+    overflow: hidden;
+
+}
+
+.project-image img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    transition: opacity 0.5s ease-in-out;
+
 }
