--- a/shafee azeem.com/styles.css
+++ b/shafee azeem.com/styles.css
@@ -4,17 +4,6 @@
     box-sizing: border-box;
 }
 
-:root {
-    --primary-color: #ffd966;
-    --primary-dark: #f1c232;
-
-    --secondary-color: #16537e;
-    --secondary-dark: #233554;
-
-    --bg-color: #1d1a2f;
-    --bg-light: aliceblue;
-}
-
 /* // container and main layout */
 .container {
     display: flex;
@@ -25,25 +14,27 @@
 html,
 body {
     height: 100%;
-    overflow: hidden;
-    font-family: sans-serif;
+    overflow-x: hidden;
+    overflow-y: hidden;
+
 }
 
 .left {
     width: 50vw;
-    background-color: var(--secondary-color);
+    background: #100d6e;
+    background: linear-gradient(220deg, rgba(16, 13, 110, 1) 0%, rgba(4, 43, 89, 1) 62%, rgba(5, 67, 181, 0.91) 100%);
     position: fixed;
     left: 0;
     top: 0;
     height: 100vh;
     padding: 2rem;
     overflow-y: auto;
-
+    color: white
 }
 
 .right {
-    background-color: var(--primary-dark);
-
+    background: #100d6e;
+    background: linear-gradient(53deg, rgba(16, 13, 110, 1) 0%, rgba(16, 75, 143, 1) 62%, rgba(5, 67, 181, 0.91) 100%);
     margin-left: 50vw;
     width: 50vw;
     height: 100vh;
@@ -52,9 +43,15 @@ body {
     padding: 2rem;
     display: block;
     gap: 2rem;
+    color: white;
 
 }
 
+.Professional-ex-heading {
+    margin-bottom: 40px;
+}
+
+/*experience styles*/
 .experience-item {
     display: flex;
     align-items: flex-start;
@@ -64,30 +61,21 @@ body {
     padding-bottom: 10px;
     cursor: pointer;
     transition: color 0.3s;
+    padding: 20px;
+    transition: background-color 0.3s ease-in;
 }
 
-.experience-details::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 2px;
-    width: 0%;
-    background-color: var(--primary-color);
-    transition: width 0.3s ease;
+.experience-item:hover {
+    background-color: #cccccc22;
+    border-radius: 8px;
 }
-
-.experience-details:hover::after {
-    width: 80%;
-}
-
 
 .experience-item .year {
     width: 20%;
     display: flex;
     font-size: 11px;
     font-weight: 900;
-    color: var(--primary-color);
+    color: yellow;
     margin-top: 0.5rem;
 
 }
@@ -121,14 +109,11 @@ body {
     font-weight: 700;
 }
 
-.left-container {
-    padding: 80px 0px 0px 40px;
-}
 
+/* profile details*/
 .profile h1 {
     font-family: 'Arial Black', sans-serif;
     font-weight: 800;
-    color: var(--primary-color);
     font-size: 3rem;
 }
 
@@ -139,16 +124,10 @@ body {
     font-family: 'Verdana', Geneva, sans-serif;
     font-weight: 600;
     letter-spacing: 2.5px;
-    color: var(--primary-color);
     padding: 5px;
 
     transition: border 0.5s ease, color 0.3 ease;
 }
-
-.profile .title:hover {
-    border: 1px solid red;
-}
-
 
 .profile .skill {
     margin-top: 20px;
@@ -171,7 +150,7 @@ body {
     position: relative;
     display: inline-block;
     padding-left: 50px;
-    color: black;
+    color: rgb(236, 223, 223);
     transition: color 0.9s ease;
     font-size: 2rem;
 }
@@ -184,21 +163,22 @@ body {
     transform: translateY(-50%);
     height: 2px;
     width: 40px;
-    background-color: black;
+    background-color: rgb(243, 237, 237);
     transition: width 0.3s ease;
 }
 
 .navigation ul li a:hover::before,
 .navigation ul li a.active::before {
-    width: 50px;
-    /* line grows on hover and active */
+    width: 65px;
+    color: rgb(94, 166, 238)
+        /* line grows on hover and active */
 }
 
 
 .navigation ul li a:hover,
 .navigation ul li a.active {
     padding-left: 70px;
-    color: rgb(15, 9, 10)
+    color: rgb(150, 183, 214)
         /* same as expanded line width */
 }
 
@@ -208,55 +188,14 @@ body {
 }
 
 
-.m,
-.e,
-.r,
-.n {
-    transition: font-size 0.3s ease, color 0.3s ease;
-}
 
-.m {
-    color: #880000;
-}
-
-.m:hover {
-    font-size: 19px;
-    cursor: pointer;
-}
-
-.e {
-    color: #303030;
-}
-
-.e:hover {
-    font-size: 19px;
-    cursor: pointer;
-}
-
-.r {
-    color: #61dafb;
-}
-
-.r:hover {
-    font-size: 19px;
-    cursor: pointer;
-}
-
-.n {
-    color: #339933;
-}
-
-.n:hover {
-    font-size: 19px;
-    cursor: pointer;
-}
 
 /* social links */
 
 .social-links {
     margin-top: 100px;
     display: flex;
-    gap: 20px;
+    gap: 5px;
 }
 
 .social-link {
@@ -268,28 +207,10 @@ body {
     transition: color 0.3 ease;
 }
 
-.social-link::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 0%;
-    height: 2px;
-    background-color: var(--primary-color);
-    transition: width 0.3s ease;
-}
 
-.social-link:hover::after {
-    width: 70%;
-}
-
-.social-link:hover {
-    color: var(--primary-dark)
-}
 
 .nav-link.active {
-    font-weight: bold;
-    color: var(--primary-color);
+    font-weight: lighter;
 }
 
 /* project card */
@@ -297,7 +218,7 @@ body {
 .project-card {
     display: flex;
     width: 100%;
-    background: #fff;
+    background: #ffffff23;
     border: 1px solid #ccc;
     border-radius: 8px;
     overflow: hidden;
@@ -324,12 +245,11 @@ body {
 
 .project-details h3 {
     margin-bottom: 0.5rem;
-    color: var(--primary-dark)
+    color: #07090F;
 }
 
 .project-details .tech-stack span {
-    background: var(--bg-light);
-    color: var(--primary-color);
+    background-color: rgba(47, 79, 79, 0.488);
     padding: 4px 8px;
     margin: 4px;
     font-size: 12px;
@@ -345,14 +265,6 @@ body {
     padding-right: 100px;
 }
 
-@media (max-width: 1024px) {
-
-    .left,
-    .right {
-        padding-left: 40px;
-        padding-right: 40px;
-    }
-}
 
 
 .project-image {
@@ -364,8 +276,6 @@ body {
 
 }
 
-
-
 .project-image img {
     max-width: 100%;
     max-height: 100%;
@@ -375,14 +285,153 @@ body {
 
 }
 
+/* main summary*/
 .main {
-    height: 100vh;
+    height: auto;
+    margin-top: 50px;
     display: flex;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: rgba(128, 128, 128, 0);
     /* optional, centers vertically */
     justify-content: center;
     font-size: 23px;
+    font-weight: 300;
     /* optional, centers horizontally */
     /* optional, for visibility */
 }
+
+/*social links and hover*/
+
+.social-link {
+    padding-left: 20px;
+    font-size: 36px;
+    margin-right: 10px;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.social-link.github:hover {
+    color: #5a97e6;
+    /* GitHub blue */
+}
+
+.social-link.linkedin:hover {
+    color: #085097;
+    /* LinkedIn blue */
+}
+
+.social-link.instagram:hover {
+    color: #e1306c;
+    /* Instagram pink */
+}
+
+.social-link.codepen:hover {
+    color: #24c7ba;
+    /* Instagram pink */
+}
+
+
+.resume {
+    padding: 15px 0 15px 20px;
+    text-decoration: none;
+}
+
+.resume:hover {
+    color: rgb(255, 249, 249);
+    cursor: pointer;
+    text-shadow: 2px 2px 5px rgba(4, 4, 4, 0.3);
+}
+
+/* media query*/
+
+@media screen and (max-width:768px) {
+
+    body {
+        background: linear-gradient(220deg, rgba(16, 13, 110, 1) 0%, rgba(4, 43, 89, 1) 62%, rgba(5, 67, 181, 0.91) 100%);
+        min-height: 100vh;
+        color: white;
+    }
+
+    .container {
+        display: block;
+    }
+
+    .left,
+    .right {
+        all: unset;
+        display: block;
+        width: 100%;
+        padding-left: 30px;
+        padding-right: 20px;
+        box-sizing: border-box;
+    }
+
+    html,
+    body {
+        height: auto;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+
+    .navigation {
+        display: none;
+    }
+
+    .main {
+        margin-top: 20px;
+        margin-bottom: 50px;
+        font-size: 20px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 200;
+    }
+
+    .social-links {
+        margin-top: 20px;
+    }
+
+    .profile h1 {
+        margin-top: 30px;
+        font-size: 40px;
+    }
+
+    .profile .title {
+        font-size: 20px;
+    }
+
+    .profile .skill {
+        font-size: 18px;
+    }
+
+    .profile .action {
+        font-size: 16px;
+        letter-spacing: 1.6px;
+    }
+
+    .right .highlight {
+        display: block;
+        color: rgb(157, 41, 41);
+    }
+
+    /* project card*/
+    .project-card {
+        flex-direction: column;
+    }
+
+    .project-image,
+    .project-details {
+        flex: none;
+        width: 100%;
+        padding: 0cap;
+    }
+
+    .project-details {
+        margin-top: 1rem;
+        padding: 15px;
+    }
+
+
+}
+
+
+/*test width*/
