--- a/shafee azeem.com/styles.css
+++ b/shafee azeem.com/styles.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -303,6 +307,8 @@ body {
     transition: opacity 0.5s ease-in-out;
 
 }
+
+
 
 /* main summary*/
 .main {
