--- a/shafee azeem.com/styles.css
+++ b/shafee azeem.com/styles.css
@@ -87,6 +87,7 @@ body {
 
 .experience-item .year {
     width: 20%;
+    font-family: monospace;
     display: flex;
     font-size: 11px;
     font-weight: 900;
