--- a/shafee azeem.com/styles.css
+++ b/shafee azeem.com/styles.css
@@ -19,6 +19,18 @@ html {
     transform: translateY(0);
 }
 
+.revealLeft {
+    opacity: 0;
+    transform: translateX(20px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.revealLeft.visible {
+    opacity: 1;
+    transform: translateX(20px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
 /* // container and main layout */
 .container {
     display: flex;
@@ -89,7 +101,7 @@ body {
     width: 20%;
     font-family: monospace;
     display: flex;
-    font-size: 11px;
+    font-size: 14px;
     font-weight: 900;
     color: #FFE548;
     margin-top: 0.5rem;
@@ -113,18 +125,19 @@ body {
     font-size: 16px;
     font-weight: 600;
     padding: 3px;
-    color: #3effcc;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #3eff9e;
+    font-family: monospace;
 }
 
 .experience-details .work-details {
     font-size: 15px;
     padding: 5px;
     color: #84C0C6;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Verdana, sans-serif;
 }
 
 .experience-details .work-location {
+    margin-top: 5px;
     color: #FFE548;
     font-weight: 700;
 }
@@ -358,7 +371,7 @@ body {
     background-color: rgba(128, 128, 128, 0);
     /* optional, centers vertically */
     justify-content: center;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 300;
     margin-bottom: 200px;
 
